# email-triage-env

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  app.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
env/: __init__.py  data.py  environment.py  graders.py  models.py  tasks.py
server/: __init__.py  app.py
tests/: test_env.py  test_graders.py
