[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "email-triage-env"
version = "1.0.0"
description = "An OpenEnv environment for email triage agent training and evaluation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn==0.34.3",
    "pydantic==2.12.5",
    "httpx==0.28.1",
    "openai==2.30.0",
    "PyYAML==6.0.2",
    "openenv-core>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
include = ["env*"]
